--- a/package.json
+++ b/package.json
@@ -25,10 +25,16 @@
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.2",
     "axios": "^1.7.7",
+    "electron-pos-printer": "^1.3.8",
     "electron-squirrel-startup": "^1.0.1",
     "electron-updater": "^6.7.3",
+    "esc-pos-encoder": "^3.0.0",
+    "jim": "^0.0.2",
+    "jimp": "^1.6.0",
+    "jit": "^0.1.1",
     "lodash": "^4.17.21",
     "mysql2": "^3.5.0",
+    "node-printer": "^1.0.4",
     "react": "^18.3.1",
     "react-barcode": "^1.6.1",
     "react-datepicker": "^7.5.0",
@@ -36,6 +42,7 @@
     "react-hot-toast": "^2.4.1",
     "react-select": "^5.8.1",
     "react-to-print": "^3.2.0",
+    "receiptline": "^3.0.0",
     "sweetalert2": "^11.14.1",
     "tree-kill": "^1.2.2",
     "v8-compile-cache": "^2.4.0"
@@ -47,6 +54,7 @@
     "vite": "^4.0.0"
   },
   "build": {
+    "asar": false,
     "appId": "com.sinyx.spos",
     "productName": "SPOS",
     "artifactName": "SPOS-Setup-${version}.${ext}",
