--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "build": "vite build --config vite.config.js",
     "start": "electron .",
     "pack": "electron-builder --dir",
-    "dist": "npm run sanitize && electron-builder",
-    "dist:installer": "npm run sanitize && electron-builder --win nsis",
-    "sanitize": "php cleanup.php",
+    "dist": "php\\php.exe cleanup.php && electron-builder",
+    "dist:installer": "php\\php.exe cleanup.php && electron-builder --win nsis",
+    "sanitize": "php\\php.exe cleanup.php",
     "postinstall": "echo Ensure Visual C++ 2015-2022 Redistributable is installed!"
   },
   "dependencies": {
@@ -59,6 +59,7 @@
     "productName": "SPOS",
     "artifactName": "SPOS-Setup-${version}.${ext}",
     "copyright": "Copyright © 2026 SINYX. All Rights Reserved.",
+    "compression": "maximum",
     "directories": {
       "output": "dist_production",
       "buildResources": "build"
