--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "type": "commonjs",
   "name": "spos",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "SPOS - Professional Point of Sale System for Sweet Shops",
   "main": "main.cjs",
   "author": {
@@ -17,9 +17,10 @@
     "build": "vite build --config vite.config.js",
     "start": "electron .",
     "pack": "nodejs\\node.exe node_modules\\electron-builder\\out\\cli\\cli.js --dir",
-    "dist": "php\\php.exe cleanup.php && nodejs\\node.exe node_modules\\electron-builder\\out\\cli\\cli.js",
-    "dist:installer": "php\\php.exe cleanup.php && nodejs\\node.exe node_modules\\electron-builder\\out\\cli\\cli.js --win nsis",
-    "sanitize": "php\\php.exe cleanup.php",
+    "dist": "php\\php.exe .build-scripts\\cleanup.php && nodejs\\node.exe node_modules\\electron-builder\\out\\cli\\cli.js",
+    "dist:installer": "php\\php.exe .build-scripts\\cleanup.php && nodejs\\node.exe node_modules\\electron-builder\\out\\cli\\cli.js --win nsis",
+    "dist:quick": "nodejs\\node.exe node_modules\\electron-builder\\out\\cli\\cli.js --win nsis",
+    "sanitize": "php\\php.exe .build-scripts\\cleanup.php",
     "postinstall": "echo Ensure Visual C++ 2015-2022 Redistributable is installed!"
   },
   "dependencies": {
@@ -48,7 +49,7 @@
     "v8-compile-cache": "^2.4.0"
   },
   "devDependencies": {
-    "electron": "^37.3.1",
+    "electron": "^28.3.3",
     "electron-builder": "^24.13.3",
     "laravel-vite-plugin": "^0.7.5",
     "vite": "^4.0.0"
@@ -168,7 +169,8 @@
           ]
         }
       ],
-      "icon": "pos-icon.ico"
+      "icon": "pos-icon.ico",
+      "requestedExecutionLevel": "requireAdministrator"
     },
     "nsis": {
       "oneClick": false,
@@ -178,7 +180,9 @@
       "createStartMenuShortcut": true,
       "shortcutName": "SPOS",
       "installerIcon": "pos-icon.ico",
-      "uninstallerIcon": "pos-icon.ico"
+      "uninstallerIcon": "pos-icon.ico",
+      "include": "installer.nsh",
+      "license": "LICENSE"
     },
     "publish": [
       {
