mysql initialization problem solved.

--- a/package.json
+++ b/package.json
@@ -93,7 +93,12 @@
       },
       {
         "from": "mysql/",
-        "to": "mysql/"
+        "to": "mysql/",
+        "filter": [
+          "**/*",
+          "!data/**/*",
+          "!tmp/**/*"
+        ]
       },
       {
         "from": "nodejs/",
