feat: Implement core POS modules for product, customer, user, purchase, refund, and supplier management, including new views, controllers, and database schema updates.

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,7 @@ last_logs.txt
 /~
 .DS_Store
 Thumbs.db
+CHANGELOG.md
+tasks/DEPLOYMENT_GUIDE.md
+tasks/PAKISTAN_IMPORT.md
+tasks/PAKISTAN_IMPLEMENTATION_SUMMARY.md
