Implement core POS system functionality including cart, orders, users, suppliers, products, and system management features. Overall performanc improvement and bugs fixed.

--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,9 @@ GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
 
 GOOGLE_MAP_KEY=""
+
+# Default seeder passwords (used only when running php artisan db:seed on a fresh install)
+# Change before seeding in production
+ADMIN_DEFAULT_PASSWORD=admin123
+CASHIER_DEFAULT_PASSWORD=cashier123
+SALES_DEFAULT_PASSWORD=sales123
