--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "private": true,
   "type": "commonjs",
   "name": "spos",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "SPOS - Professional Point of Sale System for Sweet Shops",
   "main": "main.cjs",
   "author": {
     "name": "SINYX",
-    "email": "think.code.sync",
+    "email": "sinyxcode@contact.com",
     "url": "https://github.com/sinyx"
   },
   "license": "UNLICENSED",
