Optimize database migration startup with an asynchronous bypass check, adjust installer perMachine setting, and ignore a new plans file.

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ database/*.sqlite
 database/*.sqlite-bak
 database/*.sqlite-journal
 database/database.sqlite.bak
+plans/database-migration-assessment.md
